--- a/LKaifer_BugTracker/Views/Account/Login.cshtml
+++ b/LKaifer_BugTracker/Views/Account/Login.cshtml
@@ -38,9 +38,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
     <!-- /pages_agile_info_w3l -->
 
-    <div class="pages_agile_info_w3l">
+    <div class="pages_agile_info_w3l" >
         <!-- /login -->
-        <div class="over_lay_agile_pages_w3ls">
+        <div class="over_lay_agile_pages_w3ls" style="height:100vh">
             <div class="registration">
 
                 <div class="signin-form profile">
@@ -73,10 +73,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h6>Don't have an account? Click<a href="@Url.Action("Register")"> here.</a></h6>
                     <h6> @Html.ActionLink("Forgot your password?", "ForgotPassword")</h6>
                     <h6>Want to login as a Demo User? Click<a href="@Url.Action("DemoLogin")"> here.</a></h6>
-                   
-
-
-
                 </div>
             </div>
             <!--copy rights start here-->
