--- a/LKaifer_BugTracker/Views/Shared/_Layout.cshtml
+++ b/LKaifer_BugTracker/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
                                         <a href="#" class="submenu-toggle-button"><i class="fa fa-cogs" aria-hidden="true"></i>Ticket Administration <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                                         <ul class="gn-submenu">
-                                            <li class="mini_list_agile"><a href="@Url.Action("MyIndex", "Tickets")"><i class="fa fa-caret-right" aria-hidden="true"></i>Ticket Index</a></li>
+                                            <li class="mini_list_agile"><a href="@Url.Action("Index", "Tickets")"><i class="fa fa-caret-right" aria-hidden="true"></i>Ticket Index</a></li>
                                             <li class="mini_list_w3_line"><a href="@Url.Action("Create", "Tickets")"><i class="fa fa-caret-right" aria-hidden="true"></i>Create a Ticket</a></li>
 
                                         </ul>
@@ -449,6 +449,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
     <!-- js -->
     <script type="text/javascript" src="~/Scripts/js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/js/bootstrap-3.1.1.min.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
     <!--High Charts-->
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -677,7 +678,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <!-- //amcharts -->
     <script src="~/Scripts/js/Chart.min.js"></script>
-    <script src="~/Scripts/js/Chart.min.js"></script>
     <script src="~/Scripts/js/modernizr.custom.js"></script>
 
     <script src="~/Scripts/js/classie.js"></script>
@@ -779,7 +779,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.print.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/js/bootstrap-3.1.1.min.js"></script>
     <script src="~/Scripts/js/jquery.multi-select.js"></script>
     <script>
         function initSidebarMenu() {
