--- a/LKaifer_BugTracker/Views/Home/Index.cshtml
+++ b/LKaifer_BugTracker/Views/Home/Index.cshtml
@@ -3,122 +3,207 @@
 @using LKaifer_BugTracker.Helpers
 @{
     ViewBag.Title = "Dashboard";
+    List<Project> ProjectList = ViewBag.AllProjectList as List<Project>;
     ApplicationDbContext db = new ApplicationDbContext();
     UserRolesHelper helper = new UserRolesHelper();
     ProjectsHelper projectshelper = new ProjectsHelper();
     NotificationHelper notificationHelper = new NotificationHelper();
     ApplicationUser currentUser = db.Users.Find(User.Identity.GetUserId());
     var currentRole = helper.ListUserRoles(User.Identity.GetUserId()).FirstOrDefault();
-    var assignedTickets = db.Tickets.Where(t => t.AssignedToUserId.Equals(currentUser.Id)).ToList();
+    var assignedDevTickets = db.Tickets.Where(t => t.AssignedToUserId.Equals(currentUser.Id)).ToList();
+    var assignedSubTickets = db.Tickets.Where(t => t.OwnerUserId.Equals(currentUser.Id)).ToList();
     var ownedTickets = db.Tickets.Where(t => t.OwnerUserId.Equals(currentUser.Id)).ToList();
     var allTickets = db.Tickets.ToList();
-
     var unassignedTickets = db.Tickets.Where(t => t.AssignedToUser.Equals(null)).ToList();
-    //var badProjectsCount = projectshelper.ProjectsMissingRoles
+   
 
 }
 
-            <!--High Charts-->
-            <div id="tickets-status-high-chart" style="height: 400px"></div>
 
-
-<!-- //nav -->
-
-<div class="clearfix"></div>
 <!-- //w3_agileits_top_nav-->
 <!-- /inner_content-->
-<div class="inner_content">
+@*<div class="inner_content">*@
     <!-- /inner_content_w3_agile_info-->
-    <div class="inner_content_w3_agile_info">
+    @*<div class="inner_content_w3_agile_info">*@
         <!-- /agile_top_w3_grids-->
-        <div class="agile_top_w3_grids">
-            <ul class="ca-menu">
-                <li>
+        @*<div class="agile_top_w3_grids">*@
+    <ul class="ca-menu">
+
+        @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+        {
+            <li>
+                <a href="@Url.Action("MyIndex", "Tickets")">
+                    <i class="fa fa-building-o" aria-hidden="true"></i>
+                    <div class="ca-content">
+                        <h4 class="ca-main one">@unassignedTickets.Count</h4>
+                        <h3 class="ca-sub">Unassigned Tickets</h3>
+                        <h3 class="ca-main one"></h3>
+                    </div>
+                </a>
+
+            </li>
+        }
+
+        @if (User.IsInRole("Developer"))
+        {
+            <li>
+                <a href="@Url.Action("MyIndex", "Tickets")">
+                    <i class="fa fa-building-o" aria-hidden="true"></i>
+                    <div class="ca-content">
+                        <h4 class="ca-main one">@assignedDevTickets.Count</h4>
+                        <h3 class="ca-sub">My Tickets</h3>
+                        <h3 class="ca-main one"></h3>
+                    </div>
+                </a>
+
+            </li>
+        }
+
+        @if (User.IsInRole("Submitter"))
+        {
+            <li>
+                <a href="@Url.Action("MyIndex", "Tickets")">
+                    <i class="fa fa-building-o" aria-hidden="true"></i>
+                    <div class="ca-content">
+                        <h4 class="ca-main one">@assignedSubTickets.Count</h4>
+                        <h3 class="ca-sub">My Tickets</h3>
+                        <h3 class="ca-main one"></h3>
+                    </div>
+                </a>
+
+            </li>
+        }
 
 
-                    <a href="@Url.Action("MyIndex", "Tickets")">
-                        <i class="fa fa-building-o" aria-hidden="true"></i>
-                        <div class="ca-content">
-                            <h4 class="ca-main one">@unassignedTickets.Count</h4>
-                            <h3 class="ca-sub">Unassigned Tickets</h3>
-                        </div>
-                    </a>
 
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "Projects")">
-                        <i class="fa fa-briefcase" aria-hidden="true"></i>
-                        <div class="ca-content">
-                            <h4 class="ca-main one">@projectshelper.ProjectsMissingRoles().Count</h4>
-                            <h3 class="ca-sub one">Unassigned Projects</h3>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("MyNotifications", "TicketNotifications")">
-                        <i class="fa fa-flash" aria-hidden="true"></i>
-                        <div class="ca-content">
-                            <h4 class="ca-main two">
-                                @NotificationHelper.GetAllUserNotificationCount()
-
-                        </h4>
-                        <h3 class="ca-sub two">My Notifications</h3>
+        @if (User.IsInRole("Admin"))
+        {
+            <li>
+                <a href="@Url.Action("MyIndex", "Projects")">
+                    <i class="fa fa-briefcase" aria-hidden="true"></i>
+                    <div class="ca-content">
+                        <h4 class="ca-main one">@projectshelper.ProjectsMissingRoles().Count</h4>
+                        <h3 class="ca-sub one">Unassigned Projects</h3>
                     </div>
                 </a>
             </li>
-            @*<li>
-        <a href="#">
-            <i class="fa fa-tasks" aria-hidden="true"></i>
-            <div class="ca-content">
-                <h4 class="ca-main three">49,436</h4>
-                <h3 class="ca-sub three">Old Projects</h3>
-            </div>
-        </a>
-    </li>*@
+
+        }
+
+        @if (User.IsInRole("Manager") || User.IsInRole("Developer") || User.IsInRole("Submitter"))
+        {
+
+            <li>
+                <a href="@Url.Action("MyIndex", "Projects")">
+                    <i class="fa fa-briefcase" aria-hidden="true"></i>
+                    <div class="ca-content">
+                        <h4 class="ca-main one">@currentUser.Projects.Count</h4>
+                        <h3 class="ca-sub one">My Projects</h3>
+                    </div>
+                </a>
+            </li>
+
+        }
+
+
+        <li>
+            <a href="@Url.Action("UserIndex", "Admin")">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                <div class="ca-content">
+                    <h4 class="ca-main two">
+                    </h4>
+                    <h3 class="ca-sub two">Team Members Index</h3>
+                </div>
+            </a>
+        </li>
+        @*<li>
+            <a href="#">
+                <i class="fa fa-tasks" aria-hidden="true"></i>
+                <div class="ca-content">
+                    <h4 class="ca-main three">49,436</h4>
+                    <h3 class="ca-sub three">Old Projects</h3>
+                </div>
+            </a>
+        </li>*@
+        @if (User.IsInRole("Submitter"))
+        {
+
+            <li>
+                <a href="@Url.Action("Create", "Tickets")">
+                    <i class="fa fa-clone" aria-hidden="true"></i>
+                    <div class="ca-content">
+                        <h4 class="ca-main four"></h4>
+                        <h3 class="ca-sub four">Create A Ticket</h3>
+                    </div>
+                </a>
+            </li>
+        }
+
+        @if (User.IsInRole("Manager") | User.IsInRole("Admin"))
+        {
+
+            <li>
+                <a href="@Url.Action("Create", "Projects")">
+                    <i class="fa fa-clone" aria-hidden="true"></i>
+                    <div class="ca-content">
+                        <h4 class="ca-main four"></h4>
+                        <h3 class="ca-sub four">Create A Project</h3>
+                    </div>
+                </a>
+            </li>
+        }
+
+        @if (User.IsInRole("Developer"))
+        {
+
             <li>
                 <a href="#">
                     <i class="fa fa-clone" aria-hidden="true"></i>
                     <div class="ca-content">
-                        <h4 class="ca-main four">30,808</h4>
-                        <h3 class="ca-sub four">New Messages</h3>
+                        <h4 class="ca-main four"></h4>
+                        <h3 class="ca-sub four">My Work Notes</h3>
                     </div>
                 </a>
             </li>
+        }
+
+        <!--High Charts-->
+        <div class="row">
+            <div class="col-md-6"
+            <div id="tickets-status-high-chart" style="height: 400px"></div>
+
+<!-- //nav -->
 
 
-            <div class="clearfix"></div>
-            </ul>
-        </div>
-        <!-- //agile_top_w3_grids-->
         <!-- /agile_top_w3_post_sections-->
         <div class="agile_top_w3_post_sections">
             <div class="col-md-6 agile_top_w3_post agile_info_shadow">
                 <div class="img_wthee_post">
-                    <h3 class="w3_inner_tittle">Latest Report</h3>
+                    <h3 class="w3_inner_tittle">Company Overview</h3>
                     <div class="stats-wrap">
-                        <div class="count_info"><h4 class="count">65,800,587 </h4><span class="year">Total Companies</span></div>
-                        <div class="year-info"><p class="text-no">20 </p><span class="year">This Year</span></div>
+                        <div class="count_info"><h4 class="count">65,800,587 </h4><span class="year">Total Administrators</span></div>
+                        <div class="year-info"><p class="text-no">20 </p><span class="year">Tickets Today:</span></div>
                         <div class="clearfix"></div>
                     </div>
                     <div class="stats-wrap">
-                        <div class="count_info"><h4 class="count">2,690 </h4><span class="year">Total Companies</span></div>
-                        <div class="year-info"><p class="text-no">40 </p><span class="year">This Month</span></div>
+                        <div class="count_info"><h4 class="count">2,690 </h4><span class="year">Total Managers</span></div>
+                        <div class="year-info"><p class="text-no">40 </p><span class="year">Tickets This Month</span></div>
                         <div class="clearfix"></div>
                     </div>
                     <div class="stats-wrap">
-                        <div class="count_info"><h4 class="count">24,660 </h4><span class="year">Total Companies</span></div>
-                        <div class="year-info"><p class="text-no">30 </p><span class="year">This Week</span></div>
+                        <div class="count_info"><h4 class="count">24,660 </h4><span class="year">Total Developers</span></div>
+                        <div class="year-info"><p class="text-no">30 </p><span class="year">Tickets This Week</span></div>
                         <div class="clearfix"></div>
                     </div>
                     <div class="stats-wrap">
-                        <div class="count_info"><h4 class="count">1,204</h4><span class="year">Total Companies</span></div>
-                        <div class="year-info"><p class="text-no">10 </p><span class="year">This Day</span></div>
+                        <div class="count_info"><h4 class="count">1,204</h4><span class="year">Total Submitters</span></div>
+                        <div class="year-info"><p class="text-no">10 </p><span class="year">Tickets Today</span></div>
                         <div class="clearfix"></div>
                     </div>
 
                 </div>
             </div>
-            <div class="col-md-6 agile_top_w3_post_info agile_info_shadow">
+            @*<div class="col-md-6 agile_top_w3_post_info agile_info_shadow">
                 <div class="img_wthee_post1">
                     <h3 class="w3_inner_tittle"> Flip Clock</h3>
                     <div class="main-example">
@@ -127,14 +212,45 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="clearfix"></div>
-        </div>
+            </div>*@
+        @*</div>*@
+            @*<div class="clearfix"></div>
 
-        <!-- //agile_top_w3_post_sections-->
+         //agile_top_w3_post_sections
+        /prograc-blocks_agileits
+    <div class="row"style="display:">
+        <div class="prograc-blocks_agileits">
+                <div class="col-md-6 bars_agileits agile_info_shadow">
+                    <h3 class="w3_inner_tittle two">Projects with Open Tickets</h3>
+                    <div class='bar_group'>
+                        @foreach (Project proj in projectList)
+        {
+                        <div class='bar_group__bar thin' label='Bugs Be Gone' show_values='true' tooltip='true' value='15'></div>
+                        <div class='bar_group__bar thin' label='Cloud Solution' show_values='true' tooltip='true' value='5'></div>
+                        <div class='bar_group__bar thin' label='Financial Portal' show_values='true' tooltip='true' value='550'></div>
+                        <div class='bar_group__bar thin' label='Financial Portal Mobile App' show_values='true' tooltip='true' value='456'></div>
+                        <div class='bar_group__bar thin' label='School Dashboard' show_values='true' tooltip='true' value='343'></div>
+                        <div class='bar_group__bar thin' label='Leadership Dashboard' show_values='true' tooltip='true' value='235'></div>
+                        <div class='bar_group__bar thin' label='LKaifer Blog' show_values='true' tooltip='true' value='550'></div>
+                        <div class='bar_group__bar thin' label='LKaifer Portfolio' show_values='true' tooltip='true' value='456'></div>
+                        <div class='bar_group__bar thin' label='Visitor Check In App' show_values='true' tooltip='true' value='550'></div>
+                        <div class='bar_group__bar thin' label='Taekwondo Mobile App' show_values='true' tooltip='true' value='456'></div>
+
+                    </div>
+                    </div>
+                    </div>
+                </div>
+
+    </div>
+    </div>*@
+
+            <div class="clearfix"></div>
+    </ul>
+        </div>
+        <!-- //agile_top_w3_grids-->
         <!-- /w3ls_agile_circle_progress-->
         <div class="w3ls_agile_cylinder chart agile_info_shadow">
-            <h3 class="w3_inner_tittle two"> Cylinder chart</h3>
+            <h3 class="w3_inner_tittle two"> Open Tickets Per Project</h3>
 
             <div id="chartdiv"></div>
 
@@ -174,19 +290,6 @@
             </div>
         </div>
         <!-- /w3ls_agile_circle_progress-->
-        <!--/prograc-blocks_agileits-->
-        <div class="prograc-blocks_agileits">
-
-
-            <div class="col-md-6 bars_agileits agile_info_shadow">
-                <h3 class="w3_inner_tittle two">Daily Sales</h3>
-                <div class='bar_group'>
-                    <div class='bar_group__bar thin' label='Rating' show_values='true' tooltip='true' value='343'></div>
-                    <div class='bar_group__bar thin' label='Quality' show_values='true' tooltip='true' value='235'></div>
-                    <div class='bar_group__bar thin' label='Amount' show_values='true' tooltip='true' value='550'></div>
-                    <div class='bar_group__bar thin' label='Farming' show_values='true' tooltip='true' value='456'></div>
-                </div>
-            </div>
             <div class="col-md-6 fallowers_agile agile_info_shadow">
                 <h3 class="w3_inner_tittle two">Recent Followers</h3>
                 <div class="work-progres">
