Chart changes, menu changes & mnior updates

--- a/LKaifer_BugTracker/Views/Account/DemoLogin.cshtml
+++ b/LKaifer_BugTracker/Views/Account/DemoLogin.cshtml
@@ -165,7 +165,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <div class="pages_agile_info_w3l">
         <!-- /login -->
-        <div class="over_lay_agile_pages_w3ls two">
+        <div class="over_lay_agile_pages_w3ls" style="height:100vh">
             <div class="registration">
                 <div class="signin-form profile">
                     <h2>Demo User Login</h2>
