--- a/LKaifer_BugTracker/Views/Account/ForgotPassword.cshtml
+++ b/LKaifer_BugTracker/Views/Account/ForgotPassword.cshtml
@@ -1,5 +1,7 @@
 ﻿@model LKaifer_BugTracker.Models.ForgotPasswordViewModel
 @{
+        Layout = null;
+
     ViewBag.Title = "Forgot your password?";
 }
 
