--- a/LKaifer_BugTracker/Views/Projects/Create.cshtml
+++ b/LKaifer_BugTracker/Views/Projects/Create.cshtml
@@ -49,7 +49,7 @@
 
 <a href=@Url.Action("Index", "Projects")>
 <div class="button">
-    <p class="btnText">Back to Project List?</p>
+    <p class="btnText">Project List</p>
     <div class="btnTwo">
         <p class="btnText2">GO!</p>
     </div>
