--- a/LKaifer_BugTracker/Views/Account/Register.cshtml
+++ b/LKaifer_BugTracker/Views/Account/Register.cshtml
@@ -39,27 +39,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <div class="pages_agile_info_w3l">
         <!-- /login -->
-        <div class="over_lay_agile_pages_w3ls two"> 
+        <div class="over_lay_agile_pages_w3ls" style="height:100vh">
             <div class="registration">
 
                 <div class="signin-form profile">
                     <h2>Sign up Form</h2>
                     <div class="login-form">
-                        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new {enctype ="Multipart/form-data"}))
-                        { @Html.AntiForgeryToken()
-                            @Html.ValidationSummary("", new { @class = "text-danger" })
-                            @Html.TextBoxFor(m => m.FirstName, new { placeholder = "First Name", required = "required" })
-                            @Html.TextBoxFor(m => m.LastName, new { placeholder = "Last Name", required = "required" })
-                            @Html.TextBoxFor(m => m.DisplayName, new { placeholder = "Display Name", required = "required" })
-                            @Html.TextBoxFor(m => m.Email, new { placeholder = "Email", required = "required" })
-                            @Html.PasswordFor(m => m.Password, new { placeholder = "Password", required = "required" })
-                            @Html.PasswordFor(m => m.ConfirmPassword, new { placeholder = "Confirm Password", required = "required" })
-                            @Html.LabelFor(m => m.Avatar)
-                            <input type="file" id ="fileUpload" name="Avatar" placeholder="Avatar" required="">
-                            <div class="tp">
-                                <input type="submit" value="SIGN Up">
-                            </div>
-                        }
+                        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { enctype = "Multipart/form-data" }))
+                        {@Html.AntiForgeryToken()
+                        @Html.ValidationSummary("", new { @class = "text-danger" })
+                        @Html.TextBoxFor(m => m.FirstName, new { placeholder = "First Name", required = "required" })
+                        @Html.TextBoxFor(m => m.LastName, new { placeholder = "Last Name", required = "required" })
+                        @Html.TextBoxFor(m => m.DisplayName, new { placeholder = "Display Name", required = "required" })
+                        @Html.TextBoxFor(m => m.Email, new { placeholder = "Email", required = "required" })
+                        @Html.PasswordFor(m => m.Password, new { placeholder = "Password", required = "required" })
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { placeholder = "Confirm Password", required = "required" })
+                        @Html.LabelFor(m => m.Avatar)
+                        <input type="file" id="fileUpload" name="Avatar" placeholder="Avatar" required="">
+                        <div class="tp">
+                            <input type="submit" value="SIGN Up">
+                        </div>
+                    }
 
 
 
