--- a/LKaifer_BugTracker/Views/Projects/MyIndex.cshtml
+++ b/LKaifer_BugTracker/Views/Projects/MyIndex.cshtml
@@ -40,42 +40,47 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Description)
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
 
-                        </td>
-                        <td>
-                            @foreach (var AssignedUser in item.Users)
-                            {
+                    </td>
+                    <td>
+                        @foreach (var AssignedUser in item.Users)
+                        {
                             @Html.DisplayFor(modelItem => AssignedUser.FullName)
-                                foreach (string role in usersRole.ListUserRoles(AssignedUser.Id))
+                            foreach (string role in usersRole.ListUserRoles(AssignedUser.Id))
                             {
-                                    <p style="font-size:10px;color:darkgray;font-style:italic;display:inline-block;">- @role</p>
-                                }
-                                <br />
+                                <p style="font-size:10px;color:darkgray;font-style:italic;display:inline-block;">- @role</p>
                             }
-                        </td>
+                            <br />
+                        }
+                    </td>
+                    
+                    <td>
+                        @if (User.IsInRole("Admin") || (User.IsInRole("Manager")))
+                        {
 
-                        <td>
-                            @if (User.IsInRole("Admin") || (User.IsInRole("Manager")))
-                            {
-                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <br />
-                                @Html.ActionLink("Assign", "Details", new { id = item.Id })
-                                @*@Html.ActionLink("Delete", "Delete", new { id = item.Id }) <br />*@
-                            }
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <br />
+                            @Html.ActionLink("Assign", "Details", new { id = item.Id })
+                            @*@Html.ActionLink("Delete", "Delete", new { id = item.Id }) <br />*@
+                        }
 
-                            @if (User.IsInRole("Submitter"))
-                            {
-                                @Html.ActionLink("Create A Ticket", "Create", "Tickets", new { id = item.Id }, null)
-                            }
-                        </td>
+                        @if (User.IsInRole("Submitter"))
+                        {
 
-                        
-                    </tr>
+                            @Html.ActionLink("Create A Ticket", "Create", "Tickets", new { id = item.Id }, null)
+                        }
+
+
+                    </td>
+
+
+                </tr>
+                          
 
 
                 }
@@ -84,11 +89,11 @@
         </table>
 
 
-        <button type="button" class="grow" style="background-color:#E53238; color:antiquewhite !important">
             @if (User.IsInRole("Manager") || (User.IsInRole("Admin")))
             {
+        <button type="button" class="grow" style="background-color:#E53238; color:antiquewhite !important">
                 @Html.ActionLink("Create A New Project", "Create", "Projects")
-            }
-        </button>
+            
+        </button>}
     </div>
 </div>
