--- a/LKaifer_BugTracker/Views/Tickets/Details.cshtml
+++ b/LKaifer_BugTracker/Views/Tickets/Details.cshtml
@@ -456,11 +456,11 @@
                             {
 
                                 <li class="timeline-item">
-                                    <div class="timeline-badge primary"><i class="glyphicon glyphicon-check"></i></div>
+                                    <div class="timeline-badge primary"><i class="fa fa-check"></i></div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
                                             <h4 class="timeline-title">@history.PropertyName</h4>
-                                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> @history.Updated.ToString("g")</small></p>
+                                            <p><small class="text-muted"><i class="fa fa-times"></i> @history.Updated.ToString("g")</small></p>
                                         </div>
                                         <div class="timeline-body">
                                                 <p>@history.PropertyName has changed from @history.OldValue to @history.NewValue</p>
